# ollama-bot-discord

./: Cargo.toml  LICENSE  README.md
src/: main.rs  prompts.rs
